--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "q": "^1.4.1",
     "uglify": "^0.1.5",
     "vinyl-source-stream": "^1.1.0",
+    "voucher-code-generator": "^1.1.1",
     "watch": "^0.18.0",
     "winston": "^2.3.1",
     "xml2js": "^0.4.16",
